--- a/Theme/index.html
+++ b/Theme/index.html
@@ -54,14 +54,14 @@
 	    <div class="container">
 	    	<div class="row centered">
 	    		<div class="col-lg-12">
-					<h1>Welcome To <b>Doggie</b></h1>
+					<h1>Welcome To <b>Doggie</b> and <b>Kitties</b></h1>
 					<h3>Find your best friend here.</h3>
 					<br>
 	    		</div>
 	    		
 	    		<div class="col-lg-2">
 	    			<h5>Amazing Fact</h5>
-	    			<p>Dogs come into our lives to teach us about love, they depart to teach us about loss.</p>
+	    			<p>Dogs come into our lives to teach us about love, they depart to teach us about loss. But you know, cats are even better, they teach us more than love and not so much about loss.</p>
 	    			<img class="hidden-xs hidden-sm hidden-md" src="assets/img/arrow1.png">
 	    		</div>
 	    		<div class="col-lg-8">
